// API definition for API Gateway service.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.breakit.game.playerid";
option java_outer_classname = "GatewayProto";

package game;

/*
 * Service to generate player id.
 * Client should call this method to receive a unique player id.
 */
service PlayerIdService {
    /*
     * Generates next Player id.
     */
    rpc GeneratePlayerId(GeneratePlayerIdRequest) returns (GeneratePlayerIdResponse);
}

/*
 * Request for player id generation. Empty message.
 */
message GeneratePlayerIdRequest {
}

/*
 * Response with a generated player id.
 */
message GeneratePlayerIdResponse {
    string player_id = 1;
}
